fixed bugs and added swagger body examples
