# docs/swagger.yaml
@@ -6,6 +6,38 @@ definitions:
       status:
         type: integer
     type: object
+  controller.Pet:
+    properties:
+      birth_date:
+        example: "2013-05-23"
+        type: string
+      name:
+        example: Raaida
+        type: string
+      owner_id:
+        example: 1
+        type: integer
+      type:
+        allOf:
+        - $ref: '#/definitions/model.AnimalType'
+        example: dog
+    type: object
+  controller.Vaccine:
+    properties:
+      animal:
+        allOf:
+        - $ref: '#/definitions/model.AnimalType'
+        example: dog
+      description:
+        example: vaccine to preventing rage
+        type: string
+      name:
+        example: anti-rabies
+        type: string
+      scheduled:
+        example: 365
+        type: integer
+    type: object
   model.AnimalType:
     enum:
     - dog
@@ -60,7 +92,7 @@ paths:
         name: pet
         required: true
         schema:
-          $ref: '#/definitions/model.Pet'
+          $ref: '#/definitions/controller.Pet'
       produces:
       - application/json
       responses:
@@ -119,6 +151,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/controller.APIError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controller.APIError'
       summary: Get a Pet
       tags:
       - Pet
@@ -137,7 +173,7 @@ paths:
         name: pet
         required: true
         schema:
-          $ref: '#/definitions/model.Pet'
+          $ref: '#/definitions/controller.Pet'
       produces:
       - application/json
       responses:
@@ -147,6 +183,10 @@ paths:
             $ref: '#/definitions/model.Pet'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.APIError'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/controller.APIError'
       summary: Edit a Pet
@@ -163,7 +203,7 @@ paths:
         name: vaccine
         required: true
         schema:
-          $ref: '#/definitions/model.Vaccine'
+          $ref: '#/definitions/controller.Vaccine'
       produces:
       - application/json
       responses:
@@ -222,6 +262,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/controller.APIError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controller.APIError'
       summary: Get a Vaccine
       tags:
       - Vaccine
@@ -240,7 +284,7 @@ paths:
         name: vaccine
         required: true
         schema:
-          $ref: '#/definitions/model.Vaccine'
+          $ref: '#/definitions/controller.Vaccine'
       produces:
       - application/json
       responses:
@@ -250,6 +294,10 @@ paths:
             $ref: '#/definitions/model.Vaccine'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.APIError'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/controller.APIError'
       summary: Edit a Vaccine
